Deployments/trips-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
  labels:
    app: trips
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - name: trips
        image: registryzxc7268.azurecr.io/trips:latest
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
