Deployments/userjava-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userjava
  labels:
    app: userjava
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userjava
  template:
    metadata:
      labels:
        app: userjava
    spec:
      containers:
      - name: userjava
        image: registryzxc7268.azurecr.io/userjava:latest
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
