Deployments/userprofile-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  labels:
    app: userprofile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - name: userprofile
        image: registryzxc7268.azurecr.io/userprofile:latest
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
