Deployments/poi-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: poi-service
  labels:
    app: poi
spec:
  ports:
  - port: 80
    name: http
    targetPort: 80
  selector:    
    app: poi
