Deployments/tripviewer-servic.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer-service
  labels:
    app: tripviewer
spec:
  ports:
  - port: 80
    name: http
    targetPort: 80
  selector:
    app: tripviewer
