Deployments/userjava-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: userjava-service
  labels:
    app: userjava
spec:
  ports:
  - port: 80
    name: http
    targetPort: 80
  selector:
    app: userjava
