Deployments/web-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: web-ingress
  namespace: web
spec:
  rules:
  - http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tripviewer-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: api-ingress
  namespace: api
spec:
  rules:
  - http:
      paths: 
      - path: /api/poi
        pathType: Prefix
        backend:
          service:
            name: poi-service
            port:
              number: 80
      - path: /api/trips
        pathType: Prefix
        backend:
          service:
            name: trips-service
            port:
              number: 80
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: userprofile-service
            port:
              number: 80
      - path: /api/user-java
        pathType: Prefix
        backend:
          service:
            name: userjava-service
            port:
              number: 80
